# kata-containers

./: .cspell.yaml  .dockerignore  .editorconfig-checker.json  .gitignore  .gitlab-ci.yml  .gitmodules  .linked-projects  .pullapprove.yml  .taplo.toml  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Developer-Guide.md  Documentation-Requirements.md  Glossary.md  Gopkg.toml  Licensing-strategy.md  Limitations.md  Makefile  Makefile.dev  README.md  Release-Checklist.md  Release-Process.md  Releases.md  SECURITY.md  SECURITY_CONTACTS  Stable-Branch-Strategy.md  Unit-Test-Advice.md  Upgrading.md  VERSION  VSocks.md  agent.go  agent_test.go  architecture.md  artifact-list.sh  build_all.sh  build_from_docker.sh  (+50 more)
pkg/logging/: Cargo.toml  Makefile
pkg/logging/src/: lib.rs
src/agent/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  coco-opa.service  kata-addon-mount.sh  kata-addon-mount@.service  kata-addon-umount.sh  kata-agent.service.in  kata-containers.target  kata-extension-mount-generator.sh  kata-extension-mount.sh  kata-extension-mount@.service  kata-extension-umount.sh  mount_tar.sh
src/agent/.cargo/: config  config.toml
src/agent/grpc_tls_keys/: .gitignore  gen_key_cert.sh
src/agent/initdata-processor/: Cargo.toml  Makefile  README.md
src/agent/initdata-processor/src/: initdata.rs  main.rs
src/agent/initdata-processor/systemd-services/: initdata-processor.service
src/agent/logging/src/: lib.rs
src/agent/netlink/: Cargo.toml
src/agent/netlink/src/: agent_handler.rs  lib.rs  neigh.rs  parser.rs
src/agent/oci/: Cargo.toml
src/agent/oci/src/: lib.rs  serialize.rs
src/agent/policy/: Cargo.toml
src/agent/policy/src/: decision.rs  lib.rs  policy.rs
src/agent/protocols/: Cargo.toml  build.rs
src/agent/protocols/hack/: update-generated-proto.sh
src/agent/protocols/protos/: agent.proto  health.proto  image.proto  oci.proto  types.proto
src/agent/protocols/src/: agent.rs  agent_grpc.rs  agent_ttrpc.rs  empty.rs  health.rs  health_grpc.rs  health_ttrpc.rs  lib.rs  oci.rs  types.rs
src/agent/rustjail/: Cargo.toml
src/agent/rustjail/src/: .#lib.rs  apparmor.rs  capabilities.rs  (+18 more)
src/agent/samples/: configuration-all-endpoints.toml
src/agent/security-reference-monitor/: Cargo.toml
src/agent/src/: addon.rs  ap.rs  ccw.rs  cdh.rs  cdi.rs  config.rs  console.rs  device.rs  features.rs  generated.rs.in  grpc.rs  guest_extension_image.rs  image.rs  image_rpc.rs  initdata.rs  lib.rs  linux_abi.rs  logging.rs  main.rs  mediation.rs  metrics.rs  mount.rs  namespace.rs  netlink.rs  netlink2.rs  network.rs  passfd_io.rs  pci.rs  policy.rs  policy_fragments.rs  random.rs  rpc.rs  sandbox.rs  secrets.rs  sev.rs  signal.rs  tdx.rs  test_utils.rs  tracer.rs  uevent.rs  (+5 more)
src/agent/systemd-services/: Makefile  guest-components-getresource.service  guest-components-imagepull.service  guest-components-sealedsecrets.service  guest-components-securemount.service  guest-components.target
src/agent/testdata/: initdata.img
src/agent/tests/: main.rs
src/agent/vsock-exporter/: Cargo.toml
src/dragonball/: .gitignore  Cargo.toml  Makefile  README.md  THIRD-PARTY  out
src/dragonball/dbs_acpi/: Cargo.toml
src/dragonball/dbs_address_space/: Cargo.toml  README.md
src/dragonball/dbs_allocator/: Cargo.toml
src/dragonball/dbs_arch/: Cargo.toml
src/dragonball/dbs_boot/: Cargo.toml  README.md
src/dragonball/dbs_device/: Cargo.toml  README.md
src/dragonball/dbs_interrupt/: Cargo.toml  README.md
src/dragonball/dbs_legacy_devices/: Cargo.toml
src/dragonball/dbs_pci/: Cargo.toml  README.md
src/dragonball/dbs_tdx/: Cargo.toml  README.md
src/dragonball/dbs_upcall/: Cargo.toml  README.md
src/dragonball/dbs_utils/: Cargo.toml  README.md
src/dragonball/dbs_virtio_devices/: Cargo.toml  THIRD-PARTY
src/dragonball/docs/: api.md  device.md  upcall.md  vcpu.md
src/dragonball/src/: address_space_manager.rs  config_manager.rs  error.rs  event_manager.rs  hypervisor_metrics.rs  io_manager.rs  kvm_context.rs  lib.rs  metric.rs  resource_manager.rs  signal_handler.rs  snapshot.rs  test_utils.rs  tracer.rs  vmm.rs
src/mem-agent/: .gitignore  Cargo.toml  Makefile
src/mem-agent/example/: Cargo.toml  build.rs  ctl.rs  srv.rs
src/mem-agent/src/: agent.rs  compact.rs  lib.rs  memcg.rs  mglru.rs  misc.rs  proc.rs  psi.rs  timer.rs
src/runtime-rs/: .gitignore  Cargo.toml  Makefile  README.md  VERSION  rust-toolchain.toml
src/runtime-rs/.cargo/: config
src/runtime-rs/arch/: aarch64-options.mk  powerpc64le-options.mk  riscv64-options.mk  riscv64gc-options.mk  s390x-options.mk  x86_64-options.mk
src/runtime-rs/config/: configuration-clh-azure-runtime-rs.toml.in  configuration-clh-runtime-rs.toml.in  configuration-cloud-hypervisor.toml.in  configuration-dragonball.toml.in  configuration-fc-rs.toml.in  configuration-openvmm-azure-runtime-rs.toml.in  configuration-qemu-coco-dev-runtime-rs.toml.in  configuration-qemu-nvidia-cpu-runtime-rs.toml.in  configuration-qemu-nvidia-gpu-runtime-rs.toml.in  configuration-qemu-nvidia-gpu-snp-runtime-rs.toml.in  configuration-qemu-nvidia-gpu-tdx-runtime-rs.toml.in  configuration-qemu-runtime-rs-coco-dev.toml.in  configuration-qemu-runtime-rs.toml.in  configuration-qemu-se-runtime-rs.toml.in  configuration-qemu-snp-runtime-rs.toml.in  configuration-qemu-tdx-runtime-rs.toml.in  configuration-qemu.toml.in  configuration-remote.toml.in  configuration-rs-fc.toml.in
src/runtime-rs/fuzz/: Cargo.toml  README.md
src/tardev-snapshotter/: Cargo.toml  Makefile  tardev-snapshotter.service
src/tardev-snapshotter/src/: main.rs  snapshotter.rs
src/tardev-snapshotter/tarfs-defs/: Cargo.toml
src/tardev-snapshotter/tarindex/: Cargo.toml
src/tardev-snapshotter/verity/: Cargo.toml
src/trace-forwarder/: Cargo.toml  Makefile  README.md
src/trace-forwarder/src/: handler.rs  main.rs  server.rs  tracer.rs
src/utarfs/: Cargo.toml  Makefile
src/utarfs/src/: fs.rs  main.rs
tools/agent-ctl/: Cargo.toml  Makefile  README.md
tools/agent-ctl/src/: client.rs  main.rs  rpc.rs  types.rs  utils.rs
(+7460 files in other folders)
