[workspace.package]
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"
license = "Apache-2.0"
rust-version = "1.85.1"

[workspace]
members = [
    # Kata Agent
    "src/agent",
    "src/agent/rustjail",
    "src/agent/policy",
    "src/agent/vsock-exporter",
]
# TODO: Add all excluded crates to root workspace
exclude = [
    "src/tools",
]

[workspace.dependencies]
oci-spec = { version = "0.8.1", features = ["runtime"] }
lazy_static = "1.3.0"
ttrpc = { version = "0.8.4", features = ["async"], default-features = false }
protobuf = "3.7.2"
libc = "0.2.94"

# Notes:
# - Needs to stay in sync with libs
# - Upgrading to 0.27+ will require code changes (see #11842)
nix = "0.26.4"

capctl = "0.2.0"
scan_fmt = "0.2.6"
scopeguard = "1.0.0"
thiserror = "1.0.26"
regex = "1.10.5"
serial_test = "0.10.0"
url = "2.5.0"
derivative = "2.2.0"
const_format = "0.2.30"

# Async helpers
async-trait = "0.1.50"
async-recursion = "0.3.2"
futures = "0.3.30"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }
tokio-vsock = "0.3.4"

netlink-sys = { version = "0.7.0", features = ["tokio_socket"] }
rtnetlink = "0.14.0"
netlink-packet-route = "0.19.0"
netlink-packet-core = "0.7.0"
ipnetwork = "0.17.0"

slog = "2.5.2"
slog-scope = "4.1.2"
slog-term = "2.9.0"

# Redirect ttrpc log calls
slog-stdlog = "4.0.0"
log = "0.4.11"

cfg-if = "1.0.0"
prometheus = { version = "0.14.0", features = ["process"] }
procfs = "0.12.0"

anyhow = "1"

cgroups = { package = "cgroups-rs", git = "https://github.com/kata-containers/cgroups-rs", rev = "v0.3.5" }

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.2.18"
tracing-opentelemetry = "0.13.0"
opentelemetry = { version = "0.14.0", features = ["rt-tokio-current-thread"] }

# Configuration
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.39"
toml = "0.5.8"
clap = { version = "4.5.40", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"

tempfile = "3.19.1"
which = "4.3.0"
rstest = "0.18.0"
async-std = { version = "1.12.0", features = ["attributes"] }

# Local dependencies
## Local dependencies from Kata Agent
kata-agent-policy = { path = "src/agent/policy" }
rustjail = { path = "src/agent/rustjail" }
vsock-exporter = { path = "src/agent/vsock-exporter" }

## Local dependencies from libs
mem-agent = { path = "src/libs/mem-agent" }
kata-sys-util = { path = "src/libs/kata-sys-util" }
kata-types = { path = "src/libs/kata-types", features = ["safe-path"] }
# Note: this crate sets the slog 'max_*' features which allows the log level
# to be modified at runtime.
logging = { path = "src/libs/logging" }
protocols = { path = "src/libs/protocols" }
runtime-spec = { path = "src/libs/runtime-spec" }
safe-path = { path = "src/libs/safe-path" }
test-utils = { path = "src/libs/test-utils" }
