[package]
edition = "2018"
name    = "mem-agent"
version = "0.1.0"

[dependencies]
anyhow      = "1.0"
async-trait = "0.1"
chrono      = "0.4"
lazy_static = "1.4"
nix         = "0.23.2"
page_size   = "0.6"
slog        = "2.5.2"
slog-scope  = "4.1.2"
tokio       = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
maplit     = "1.0"
once_cell  = "1.9.0"
slog-async = "2.7"
slog-term  = "2.9.0"
