[package]
name = "runtime-rs"
version = "0.1.0"
authors = { workspace = true }
description = "Containerd shim runtime for Kata Containers"
keywords = ["kata-containers", "shim"]
repository = "https://github.com/kata-containers/kata-containers.git"
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "containerd-shim-kata-v2"
path = "crates/shim/src/bin/main.rs"

[[bin]]
name = "shim-ctl"
path = "crates/shim-ctl/src/main.rs"

[features]
dragonball = ["runtimes/dragonball"]
cloud-hypervisor = ["runtimes/cloud-hypervisor"]

[dependencies]
anyhow = { workspace = true }
go-flag = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
shim = { path = "crates/shim" }
common = { workspace = true }
logging = { workspace = true }
runtimes = { workspace = true }
