# Copyright (c) 2020 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "kata-trace-forwarder"
version = "0.0.1"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
vsock = "0.1.5"
nix = "0.15.0"
libc = "0.2.66"
serde = { version = "1.0.106", features = ["derive"] }
bincode = "1.2.1"
byteorder = "1.3.4"
serde_json = "1.0.44"
anyhow = "1.0.31"
opentelemetry = { version = "0.5.0", features=["serialize"] }
opentelemetry-jaeger = "0.4.0"
protobuf = "=2.14.0"
tracing-opentelemetry = "0.4.0"
tracing = "0.1.14"
tracing-subscriber = "0.2.5"

logging = { path = "../../pkg/logging" }
slog = "2.5.2"

[dev-dependencies]
tempfile = "3.1.0"
