[package]
name = "utarfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.12.0"
libc = "0.2.51"
log = "0.4.17"
env_logger = "0.6.0"
memmap = "0.7.0"
zerocopy = "0.6.1"
tarfs-defs = { path = "../tardev-snapshotter/tarfs-defs" }
clap = { version = "4.3.2", features = ["derive"] }
daemonize = "0.5.0"
