# Copyright (c) 2020 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "kata-agent-ctl"
version = "0.0.1"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"

[dependencies]
protocols = { path = "../../src/agent/protocols" }
rustjail = { path = "../../src/agent/rustjail" }
oci = { path = "../../src/agent/oci" }

clap = "2.33.0"
lazy_static = "1.4.0"
anyhow = "1.0.31"
hex = "0.4.2"
byteorder = "1.3.4"

logging = { path = "../../pkg/logging" }
slog = "2.5.2"
slog-scope = "4.3.0"
rand = "0.7.3"
protobuf = "2.14.0"

nix = "0.17.0"
libc = "0.2.69"
# XXX: Must be the same as the version used by the agent
ttrpc = { version = "0.5.0" }

# For parsing timeouts
humantime = "2.0.0"

# For Options (state passing)
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
